Flex fix for images and text align

--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -6,7 +6,7 @@
 
 */
 
-.grid, .grid [class*="column"], .grid [class*="row"], .grid [class*="cell"] {
+.grid, .grid [class*="column"], .grid [class*="row"] {
 	display: flex;
 	flex-wrap: wrap;
 }
